docker config moved to container dir | readme update